# mkdocs-demo

./: 404.html  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml  versions.json
0.0.1/: 404.html
docs/: index.md
en/: index.html
search/: search_index.json
site/: index.html
