[tool.poetry]
name = "mkdocsss"
version = "0.1.0"
description = ""
authors = ["orangekame3 <orangekame3.dev@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.15"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-glightbox = "^0.3.7"
mkdocs-swagger-ui-tag = "^0.6.9"
mkdocs-static-i18n = "^1.2.2"
pymdown-extensions = "^10.7.1"
mkdocs = "^1.5.3"
mike = "^2.0.0"
